# FlowDesk

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  _diag.sh  flowdesk.spec  launcher.py  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  quickstart.md
spikes/: viewer_spike.py
src/flowdesk/: __init__.py
src/flowdesk/app/: __init__.py  bc_catalog.py  case_ops.py  geometry_io.py  mesh_suggest.py  projects.py  results_io.py  scenario.py  settings.py  staleness.py  templates.py  user_templates.py
src/flowdesk/data/: __init__.py  dam_simflow.stl
src/flowdesk/exec/: __init__.py  diagnosis.py  error_explanations.yaml  errors.py  meshing.py  monitors_io.py  parsers.py  pipeline.py  (+2 more)
tests/: conftest.py  test_acceptance.py  test_app_services.py  test_bc_stage_ui.py  test_bc_subtypes.py  test_case_model.py  test_case_ops.py  test_components_smoke.py  test_dam_breach.py  test_diagnosis.py  test_environment.py  test_exec.py  test_file_browser.py  test_foamlib_roundtrip.py  test_generators.py  test_geometry_primitives.py  test_home_screen.py  test_icons.py  test_interfoam.py  test_journey_gate.py  test_live_previews.py  test_mesh_patch_view.py  test_mesh_suggest.py  test_mesh_ux_fixes.py  test_monitors.py  test_monitors_ui.py  test_no_inline_styles.py  test_openfoam_gate.py  test_ownership.py  test_panel_fit.py  test_path_safety.py  test_polish.py  test_polymesh_sync.py  test_refinement_toggle.py  test_results_animation.py  test_results_io.py  test_run_diagnosis_ui.py  test_run_gate.py  test_save_and_mesh_view.py  test_scalar_transport.py  (+15 more)
(+52 files in other folders)
