[project]
name = "flowdesk"
version = "0.1.0"
description = "FlowDesk - a desktop GUI for setting up, running, and post-processing OpenFOAM CFD simulations"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
dependencies = [
    "PyQt6>=6.7",
    "pyvista>=0.45",
    "pyvistaqt>=0.11",
    "foamlib>=1.0",
    "pydantic>=2.7",
    "pyqtgraph>=0.13",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.6",
]

[project.scripts]
flowdesk = "flowdesk.ui.main:main"
flowdesk-gallery = "flowdesk.ui.gallery:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowdesk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Qt signal/slot names follow Qt's camelCase convention
"src/flowdesk/ui/**" = ["N815"]
